# precore

./: README.md
ASM_RE/: README.md
ASM_RE/instructional_examples/: .gitignore  01_mov.32.asm  02_directives.64.asm  03_math.32.asm  04_stack.64.asm  05_stack_args_and_vars.c  06_flags.32.asm  07_jmp.32.asm  08_cdecl.32.asm  09_stdcall.32.asm  10_pointer.32.asm  11_syscall.32.asm  12_bufferoverflow.c  13_bufferoverflow_full_example.c  14_reverseengineering.c  15_bufferpwntools.c  README.md  compile.sh  gen_shellcode.sh  pwntools_example.py  test_shellcode.c
ASM_RE/labs/day5/easier_gadget_lab/: CMakeLists.txt  README.md
ASM_RE/labs/day5/easier_gadget_lab/src/: gogogadget.c
ASM_RE/labs/day5/gadget_lab/: CMakeLists.txt  README.md  pwn1_solution_example.py
ASM_RE/labs/day5/gadget_lab/src/: pwn1.c  pwn1_prod.c
C/: Milestones.md  pointers  pointers.c  syllabus.md
C/exercises/: README.md
C/roadrunner/: CMakeLists.txt  NoSkeletonREADME.md  README.md
Python/: requirements.txt  syllabus.md
Python/ACME/: asyncio_test.py
Python/Day1/: elements.py  fibonnaci.py  primary_colors.py
Python/Day3/: rot.py
capstone/Hardware/: capstone.md
capstone/ssh_demo/: README.md  docker-compose.yml
challenges/: tigger.c
crypto/: Dockerfile  README.md  build.sh  docker-compose.yml  lab01.py  lab02.py  lab03.py  lab04.py  lab04_saltedhash.txt  lab04_setup.py  lab05.py  lab06.py  lab08.py  otp.py  padding_oracle.py  randomness.py  requirements.txt
crypto/advanced_labs/: additive_group.py  (+3 more)
resources/: RecommendedEnvironment.md  ceasar.py  docker-compose.yml  sign_in.py
(+441 files in other folders)
